--- a/action.yaml
+++ b/action.yaml
@@ -11,7 +11,7 @@ inputs:
   email:
   description: The commiter's email address 
   required: true
-  default: ${{ github.actor}}@localhots
+  default: ${{ github.actor}}@localhost
 name:
   description: The committer's name
   required:  true
