--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: "Podcast Generator"
+name: "Podcast Gen"
 author: "Sergio Mazon"
 description: "Generates a feed for podcast from a YAML file"
 runs:
